--- a/caro.html
+++ b/caro.html
@@ -227,7 +227,7 @@
 		 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p> -->
 	    </div>    
         </header>
-             
+   <!--          
 	<div class="page2" style="background-color:black; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 1rem !important; height: 20rem">
             <div class="container px-4">
                 <div class="row gx-4">
@@ -236,7 +236,7 @@
                 </div>
             </div>
 	</div>		
-	
+	-->
 	  
 	<div class="container px-4 py-5" id="custom-cards" style="background-color:black">
     <h2 class="pb-2 border-bottom" style="color:white">The Mission</h2>
@@ -394,30 +394,29 @@
   <div class="container marketing" style="text-align: center">
 
     <!-- Three columns of text below the carousel -->
-	
+<!--	
     <div class="row">
 	  <h2 style="text-align:center; margin-top: 3rem; margin-bottom: 4rem; color:white">The Astronauts</h2>
       <div class="reveal col-lg-4" style="margin-bottom: 3.5rem">
         <svg style="background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title></svg>
         <h2 class="fw-normal" style="margin-top: 1rem; color:white">The Man</h2>
-        <!-- <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p> 
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
-      </div><!-- /.col-lg-4 -->
+     
+      </div>
       <div class="reveal col-lg-4" style="margin-bottom: 3.5rem">
         <svg style="background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title></svg>
         <h2 class="fw-normal" style="margin-top: 1rem; color:white">The Myth</h2>
 
-      </div><!-- /.col-lg-4 -->
+      </div>
       <div class="reveal col-lg-4" style="margin-bottom: 3.5rem">
         <svg 					style="background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title></svg>
         <h2 class="fw-normal" style="margin-top: 1rem; color:white">The Legend</h2>
 
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
+      </div>
+    </div>
+-->
 
     <!-- START THE FEATURETTES -->
-</section>
+<!-- </section> -->
     <hr class="featurette-divider">
 
     <div class="reveal row featurette">
