--- a/caro.html
+++ b/caro.html
@@ -288,8 +288,8 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space3.png');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 3</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-        <!--      <li class="me-auto">
+        <!--    <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto">
                 <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
               </li>
               <li class="d-flex align-items-center me-3">
@@ -315,33 +315,30 @@
             <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-					    <div style="position:absolute; top: 0px; right: 0px; color: white; width: 100%; background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(25px) brightness(100%); background: radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%);">
+			<h2 class="pb-2 border-bottom" style="color:white">The Astronauts</h2>
+		   <!-- <div style="position:absolute; top: 0px; right: 0px; color: white; width: 100%; background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(25px) brightness(100%); background: radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%);">
                         <h2>F1</h2>
-						</div>
+			</div>
                         <div style="position:absolute; top: 0px; right: 0px; color: white; width: 100%; background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background: radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%);">
                         <h2>F2</h2>
-						</div>
-						<div class="rounded bg-dark" style="box-shadow: inset 0 0 1rem rgba(0, 0, 0, .5); text-align:center; position:absolute; top: 0px; right: 0px; width: 100%">
-						<h2>The Astronauts</h2>
-						</div>
-                        <!-- <h2 class="rounded" style="text-align: center; background-color: black; height: 100%; width: 100%;">
-						The Astronauts
-						</h2> -->
-                        <!-- <p class="lead">Lem dolom et repudiandae ipsa exercitationem, in, quo totam.</p> -->
+			</div>
+			<div class="rounded bg-dark" style="box-shadow: inset 0 0 1rem rgba(0, 0, 0, .5); text-align:center; position:absolute; top: 0px; right: 0px; width: 100%">
+			<h2>The Astronauts</h2>
+			</div> -->
                     </div>
                 </div>
             </div>
 			<br>
 			<br>
-			<div class="container px-4 text-center" style="padding-top:4rem">
+	    <div class="container px-4 text-center" style="padding-top:4rem">
                 <div class="row">
-                    <div class="reveal col-lg-4">
-					    <div style="position:relative; height:140px">
-						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
+                    <div class="reveal col-lg-4" style="padding-bottom: 2rem">
+		        <div style="position:relative; height:140px" style="padding-bottom: 10rem">
+			    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
                             <div style="position:absolute; top: 0px; height:140px; width:100%">
                                 <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="black"></rect></svg>
-					        </div>
-					    </div>
+			    </div>
+			</div>
 						<h2 class="fw-normal">The Man</h2>
                         <p>Some representative placeholder content for the first column.</p>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
