--- a/caro.html
+++ b/caro.html
@@ -223,8 +223,9 @@
                  <div class="page8" style="height: 20rem">
                  <!-- #000314 <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a> -->
                  </div>
-	<!--	 <br>
-		 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p> -->
+		 <br>
+		 <br>
+	<!--	 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p> -->
 	    </div>    
         </header>
    <!--          
@@ -238,33 +239,33 @@
 	</div>		
 	-->
 	  
-	<div class="container px-4 py-5" id="custom-cards" style="background-color:black">
-    <h2 class="pb-2 border-bottom" style="color:white">The Mission</h2>
+    <div class="container px-4 py-5" id="custom-cards" style="background-color:black">
+        <h2 class="reveal pb-2 border-bottom" style="color:white">The Mission</h2>
 
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space5.png');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 1</h3>
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+            <div class="reveal col">
+                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space5.png');">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 1</h3>
       <!--      <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
                 <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-              </li>
+              </li>    
               <li class="d-flex align-items-center me-3">
                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
                 <small>Earth</small>
-              </li>
+              </li>   
               <li class="d-flex align-items-center">
                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
                 <small>3d</small>
-              </li>
+              </li>   
             </ul> -->
-          </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
+                    </div>
+                </div>
+            </div>
+            
+            <div class="reveal1 col">
+                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 2</h3><div style="height:10rem"></div>
            <!-- <ul class="d-flex list-unstyled mt-auto">
@@ -284,7 +285,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="reveal2 col">
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space3.png');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 3</h3>
