--- a/caro.html
+++ b/caro.html
@@ -250,7 +250,7 @@ svg {
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
   </head>
-  <body style="background-color:black; padding-top:0 !important; padding-bottom:0">
+  <body id="page-top" style="background-color:black; padding-top:0 !important; padding-bottom:0">
   
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <symbol id="check2" viewBox="0 0 16 16">
@@ -783,7 +783,7 @@ svg {
     <p class="float-end" style="margin-bottom:0rem; padding-bottom:2rem"><a href="#">Back to top</a></p>
     <p style="margin-bottom:0rem; padding-bottom:2rem">&copy; 2017–2023 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer> -->
-	  
+	  <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
 </main>
 
 
