--- a/caro.html
+++ b/caro.html
@@ -288,13 +288,13 @@ to {
 <!-- Phase1 Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
+    <div class="modal-content" style="background-color:#FFF8E7">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color:black">Help Us Get To Outer Space</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:black">
-        With a diverse line of products and investments, every dollar we make gets us one step closer to that giant leap
+        With our diverse line of products and investments, every dollar we make gets us one step closer to that giant leap.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
