--- a/caro.html
+++ b/caro.html
@@ -436,7 +436,7 @@ to {
 	    <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="color:white">The Rewards</h2>
+			<h2 class="pb-2 border-bottom" style="padding-top: 10rem; color:white">The Rewards</h2>
                     </div>
                 </div>
             </div>
@@ -461,7 +461,7 @@ to {
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
+  
 
     <div class="reveal row featurette">
       <div class="col-md-7">
