--- a/caro.html
+++ b/caro.html
@@ -436,7 +436,7 @@ to {
 	    <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="padding-top: 10rem; color:white">The Rewards</h2>
+			<h2 class="pb-2 border-bottom" style="padding-top: 8rem; color:white">The Rewards</h2>
                     </div>
                 </div>
             </div>
@@ -447,7 +447,7 @@ to {
 	
 	
 	
-<main style="background: linear-gradient(180deg,#000000,rgba(12,14,31) 90%); box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
+<main style="padding-top: 4rem; background: linear-gradient(180deg,#000000,rgba(12,14,31) 90%); box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
 
 
 
@@ -512,7 +512,7 @@ to {
 	 
 </main>
 	
-<!-- <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a> -->
+
 
 	
 	<a class="scroll-to-top" href="#page-top">
