--- a/caro.html
+++ b/caro.html
@@ -274,19 +274,7 @@ to {
 	<!--	 <p class="lead" style="margin-bottom:0rem">You're here to help a couple of guys get to outer space.</p> -->
 	    </div>    
         </header>
-	  				 <p>
-  <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-    Link with href
-  </a>
-  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-    Button with data-bs-target
-  </button>
-</p>
-<div class="collapse" id="collapseExample">
-  <div class="card card-body">
-    Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-  </div>
-</div>
+
    <!--          
 	<div class="page2" style="background-color:black; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 1rem !important; height: 20rem">
             <div class="container px-4">
@@ -401,9 +389,16 @@ to {
             </div>
 			<br>
 			<br>
+		
+
+
+		
+		
+		
+		
 	    <div class="container px-4 text-center" style="padding-top:2rem">
                 <div class="row">
-                    <div class="reveal col-lg-4" style="padding-bottom: 2rem">
+                    <div class="reveal col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
 		        <div style="position:relative; height:140px; padding-bottom: 10rem">
 			    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
                             <div style="position:absolute; top: 0px; height:140px; width:100%">
@@ -412,6 +407,11 @@ to {
 			</div>
 			<h2 class="fw-normal">The Man</h2>
                         <p>Some representative placeholder content for the first column.</p>
+			    <div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+  </div>
+</div>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                     <div class="reveal1 col-lg-4" style="padding-bottom: 2rem">
