--- a/caro.html
+++ b/caro.html
@@ -398,7 +398,7 @@ to {
 		
 	    <div class="container px-4 text-center" style="padding-top:2rem">
                 <div class="row">
-                    <div class="reveal col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <div class="reveal col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#theman" aria-expanded="false" aria-controls="theman">
 		        <div style="position:relative; height:140px; padding-bottom: 10rem">
 			    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
                             <div style="position:absolute; top: 0px; height:140px; width:100%">
@@ -407,14 +407,14 @@ to {
 			</div>
 			<h2 class="fw-normal">The Man</h2>
                         <p>Some representative placeholder content for the first column.</p>
-			    <div class="collapse" id="collapseExample">
+			    <div class="collapse" id="theman">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
 </div>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
-                    <div class="reveal1 col-lg-4" style="padding-bottom: 2rem">
+                    <div class="reveal1 col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#themyth" aria-expanded="false" aria-controls="themyth">
                         <div style="position:relative; height:140px; padding-bottom: 10rem">
 						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
                                 <div style="position:absolute; top: 0px; height:140px; width:100%">
@@ -426,10 +426,15 @@ to {
 					    </div>
                         <h2 class="fw-normal">The Myth</h2>
                         <p>Representative placeholder content for the second column.</p>
+			    <div class="collapse" id="themyth">
+  <div class="card card-body">
+    Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+  </div>
+</div>
 						
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
-                    <div class="reveal2 col-lg-4" style="padding-bottom: 2rem">
+                    <div class="reveal2 col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#thelegend" aria-expanded="false" aria-controls="thelegend">
                         <div style="position:relative; height:140px; padding-bottom: 10rem">
 						    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(45px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
                                 <div style="position:absolute; top: 0px; height:140px; width:100%">
@@ -441,6 +446,11 @@ to {
 					    </div>
                         <h2 class="fw-normal">The Legend</h2>
                         <p>And lastly this, the third column of representative placeholder content.</p>
+			    			    <div class="collapse" id="themyth">
+  <div class="card card-body">
+    Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+  </div>
+</div>
                         <!-- <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p> -->
                     </div>
                 </div>
