--- a/caro.html
+++ b/caro.html
@@ -285,7 +285,9 @@ to {
             </div>
 	</div>		
 	-->
-
+	  
+	  
+<!-- Modaal section-->
 <!-- Phase1 Modal -->
 <div class="modal fade" id="P1M" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
@@ -344,7 +346,7 @@ to {
   </div>
 </div>	  
 	  
-
+<!-- Mission section-->
     <div class="container px-4 py-5" id="custom-cards" style="background-color:black">
         <h2 class="reveal pb-2 border-bottom" style="color:white">The Mission</h2>
 
@@ -377,8 +379,7 @@ to {
 	  
 	  
 	  
-	
-		<!-- Astronaut section-->
+<!-- Astronaut section-->
         <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 3rem !important">
             <div class="container px-4">
                 <div class="row">
@@ -390,7 +391,7 @@ to {
 			<br>
 			<br>
 		
-	    <div class="container px-4 text-center" style="padding-top:2rem">
+	    <div class="container px-4 text-center">
                 <div class="row">
                     <div class="reveal col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#theman" aria-expanded="false" aria-controls="theman">
 		        <div style="position:relative; height:140px; padding-bottom: 10rem">
