--- a/caro.html
+++ b/caro.html
@@ -391,7 +391,8 @@ to {
 			<br>
 			<br>
 		
-	    <div class="container px-4 text-center">
+<!--	    <div class="container px-4 text-center" style="padding-top:2rem"> -->
+            <div class="container px-4 text-center">
                 <div class="row">
                     <div class="reveal col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#theman" aria-expanded="false" aria-controls="theman">
 		        <div style="position:relative; height:140px; padding-bottom: 10rem">
@@ -401,7 +402,7 @@ to {
 			    </div>
 			</div>
 			<h2 class="fw-normal">The Man</h2>
-                        <p>Some representative placeholder content for the first column.</p>
+                        <p style="margin-bottom:0rem !important">Some representative placeholder content for the first column.</p>
 			    <div class="collapse" id="theman">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -420,7 +421,7 @@ to {
 					            </div>
 					    </div>
                         <h2 class="fw-normal">The Myth</h2>
-                        <p>Representative placeholder content for the second column.</p>
+                        <p style="margin-bottom:0rem !important">Representative placeholder content for the second column.</p>
 			    <div class="collapse" id="themyth">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
@@ -440,7 +441,7 @@ to {
 					            </div>
 					    </div>
                         <h2 class="fw-normal">The Legend</h2>
-                        <p>And lastly this, the third column of representative placeholder content.</p>
+                        <p style="margin-bottom:0rem !important">And lastly this, the third column of representative placeholder content.</p>
 			    			    <div class="collapse" id="thelegend">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
