--- a/caro.html
+++ b/caro.html
@@ -139,7 +139,7 @@
   position: relative;
   transform: translateY(150px);
   opacity: 0;
-  transition: 1.3s all ease;
+  transition: 1s all ease;
 }
 
 .reveal1.active{
@@ -151,7 +151,7 @@
   position: relative;
   transform: translateY(150px);
   opacity: 0;
-  transition: 1.5s all ease;
+  transition: 1s all ease;
 }
 
 .reveal2.active{
@@ -261,8 +261,8 @@ to {
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
   </head>
- <!-- <body id="page-top" style="background-color:black; padding-top:0 !important; padding-bottom:0">
- -->  <body id="page-top" style="padding-top:0 !important; padding-bottom:0"> 
+  <body id="page-top" style="background-color:black; padding-top:0 !important; padding-bottom:0">
+
 
         <header class="text-white" style="background: linear-gradient(180deg,#0a0c21,rgba(0,0,0) 90%); box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 5rem !important; padding-bottom: 5rem">
             <div class="container px-4 text-center">
@@ -380,7 +380,7 @@ to {
 	  
 	  
 <!-- Astronaut section-->
-        <section id="astro" style="color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 3rem !important">
+        <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 3rem !important">
             <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
