--- a/caro.html
+++ b/caro.html
@@ -380,7 +380,7 @@ to {
 	  
 	  
 <!-- Astronaut section-->
-        <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); margin-bottom: 5rem; padding-top: 3rem !important">
+        <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); margin-bottom: 3rem; padding-top: 3rem !important">
             <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
@@ -395,7 +395,7 @@ to {
             <div class="container px-4 text-center">
                 <div class="row">
               <!--      <div class="reveal col-lg-4" style="padding-bottom: 2rem" type="button" data-bs-toggle="collapse" data-bs-target="#theman" aria-expanded="false" aria-controls="theman">
-               -->     <div class="reveal col-lg-4" style="margin-bottom: 5rem !important; padding-top: 5rem" type="button" data-bs-toggle="collapse" data-bs-target="#theman" aria-expanded="false" aria-controls="theman">
+               -->     <div class="reveal col-lg-4" style="padding-top: 5rem" type="button" data-bs-toggle="collapse" data-bs-target="#theman" aria-expanded="false" aria-controls="theman">
 		      
 			    <div style="position:relative; height:140px; padding-bottom: 10rem">
 			    <svg style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>
